# Customer-Support-Agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: agent.py  limiter.py  main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/ui/: button.jsx  card.jsx  input.jsx
