[project]
name = "customer-support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.5",
    "langchain>=1.2.9",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.8",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
